<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cVFrgRegister"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="@dimen/default_elevation_lvl_one"
    android:padding="@dimen/default_medium_size"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app.ui.init.InitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout style="@style/Workhard.TextInputFrom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/eTFrgRegisterName"
                style="@style/Workhard.EditTextFrom"
                android:contentDescription="@string/frg_register_cd_first_name"
                android:hint="@string/frg_register_first_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/Workhard.TextInputFrom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/eTFrgLoginLastName"
                style="@style/Workhard.EditTextFrom"
                android:contentDescription="@string/frg_register_cd_last_name"
                android:hint="@string/frg_register_last_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout style="@style/Workhard.TextInputFrom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/eTFrgLoginEmail"
                style="@style/Workhard.EditTextFrom"
                android:contentDescription="@string/frg_register_cd_email"
                android:hint="@string/frg_register_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tVFrgRegisterDate"
            style="@style/Workhard.TextViewFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/frg_register_cd_birthday"
            android:hint="@string/frg_register_birthday" />


        <android.support.design.widget.TextInputLayout style="@style/Workhard.TextInputFrom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/eTFrgLoginPassword"
                style="@style/Workhard.EditTextFrom"
                android:contentDescription="@string/frg_register_cd_password"
                android:hint="@string/frg_register_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/Workhard.TextInputFrom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/eTFrgLoginRepeatPassword"
                style="@style/Workhard.EditTextFrom"
                android:contentDescription="@string/frg_register_cd_confirm_password"
                android:hint="@string/frg_register_confirm_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
