<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_menu_add"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_menu_add_all"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_add_all"
        android:visible="false"
        app:showAsAction="always" />
</menu>