<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/default_small_size"
    app:cardElevation="@dimen/default_small_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_large_size">

        <TextView
            android:id="@+id/tVItemWorkoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/item_workout_cd_workout_name"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/tVItemWorkoutRounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/item_workout_cd_round"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        <TextView
            android:id="@+id/tVItemWorkoutRestExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/item_workout_cd_rest_between_exercises"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tVItemWorkoutRestRounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/item_workout_cd_rest_between_rounds"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tVItemWorkoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:contentDescription="@string/item_workout_cd_date_of_the_workout"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>
</android.support.v7.widget.CardView>