<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tVFrgRestWorkoutNextExercise"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frg_do_workout_next_description"
        tools:text="Push up" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bTFrgRestWorkoutSkip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/frg_do_workout_cd_skip_the_current_exercise"
            android:gravity="center"
            android:padding="@dimen/default_large_size"
            android:text="@string/frg_do_workout_skip"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/primary_dark"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary" />

        <Button
            android:id="@+id/bTFrgRestWorkoutNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/frg_do_workout_cd_go_to_next_step"
            android:gravity="center"
            android:padding="@dimen/default_large_size"
            android:text="@string/frg_do_workout_next"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/primary_dark"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>